# diabolical-playpen

./: meson.build
configs/: maes-config.toml  window-config.toml
snacks/: aynrand.tif
src/: Cursoresque.cpp  Cursoresque.h  playpen.cpp
src/shaders/: basic_varying.def.sc  collage_bg_fs.sc  collage_bg_vs.sc  grid_fs.sc  grid_varying.def.sc  grid_vs.sc  matte_video_fs.sc  matte_video_vs.sc  overlay_fs.sc  overlay_instance_fs.sc  overlay_instance_vs.sc  overlay_varying.def.sc  overlay_vs.sc  primal_fs.sc  primal_vs.sc  quad_fs.sc  quad_vs.sc  textured_renderable.fs.sc  textured_renderable.vs.sc  video_fs.sc  video_vs.sc
src/shaders/include/: over_up.sh  yuv.sh
